# iam

./: .gitignore
api_fastapi/: README.md  main.py  pyproject.toml
api_fastapi/src/backend/: __init__.py  app.py  auth.py  config.py
gui_nextjs/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  proxy.ts
gui_nextjs/app/: layout.tsx  page.tsx
gui_nextjs/app/api/auth/account/: route.ts
gui_nextjs/app/api/auth/callback/: route.ts
gui_nextjs/app/api/auth/login/: route.ts
gui_nextjs/app/api/auth/logout/: route.ts
gui_nextjs/app/api/auth/me/: route.ts
gui_nextjs/app/api/ping/: route.ts
gui_nextjs/app/auth/error/: page.tsx
gui_nextjs/app/dashboard/: page.tsx
gui_nextjs/app/ping/: page.tsx
gui_nextjs/core/base/navbar/: index.tsx
gui_nextjs/core/base/popup-link/: index.tsx
gui_nextjs/services/: iam.tsx  zitadel.server.ts
zitadel/: READAPP.md  README.md  docker-compose.prod.yml  docker-compose.yml  genkey.sh  run.sh
